// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputContainer /> is disabled by default 1`] = `
<InputContainer
  started={false}
>
  <InputArea
    onChange={[Function]}
    onEnter={[Function]}
    started={false}
    value=""
  >
    <styled.div>
      <div
        className="sc-bdVaJa gwEsTk"
      >
        <styled.input
          disabled={true}
          innerRef={[Function]}
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Press start to begin..."
          type="text"
          value=""
        >
          <input
            className="sc-bwzfXH eptTMA"
            disabled={true}
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Press start to begin..."
            type="text"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
  </InputArea>
</InputContainer>
`;

exports[`<InputContainer /> is disabled when the game has stopped 1`] = `
<InputContainer
  started={false}
>
  <InputArea
    onChange={[Function]}
    onEnter={[Function]}
    started={false}
    value=""
  >
    <styled.div>
      <div
        className="sc-bdVaJa gwEsTk"
      >
        <styled.input
          disabled={true}
          innerRef={[Function]}
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Press start to begin..."
          type="text"
          value=""
        >
          <input
            className="sc-bwzfXH eptTMA"
            disabled={true}
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Press start to begin..."
            type="text"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
  </InputArea>
</InputContainer>
`;

exports[`<InputContainer /> is enabled when the game has started 1`] = `
<InputContainer
  started={true}
>
  <InputArea
    onChange={[Function]}
    onEnter={[Function]}
    started={true}
    value=""
  >
    <styled.div>
      <div
        className="sc-bdVaJa gwEsTk"
      >
        <styled.input
          disabled={false}
          innerRef={[Function]}
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Type the word and hit Enter!"
          type="text"
          value=""
        >
          <input
            className="sc-bwzfXH eptTMA"
            disabled={false}
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Type the word and hit Enter!"
            type="text"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
  </InputArea>
</InputContainer>
`;
